about section whitespace repair, services btns text center,  header scroll mouse position

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,10 @@ ul {
     margin-bottom: 2rem;
 }
 
+@media (max-width: 768px) {
+    margin-bottom: 0;
+}
+
 .header .navbar {
     margin: 0;
     padding-top: 3.125rem;
